<resources>
    <string name="action_settings">Settings</string>
    <string name="imgdesc">imgdesc</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_splash">DHIS2 Tracker</string>
    <string name="title_activity_pin">Pin Code Lock</string>
    <string name="organisation_unit">Organisation Unit</string>
    <string name="programId">Program</string>
    <string name="register">Register</string>
    <string name="enrollment">Enrollment</string>
    <string name="eventDate">Event date</string>
    <string name="dialog_organisation_units">Organisation units</string>
    <string name="dialog_programs">Programs</string>
    <string name="please_enter">Please enter</string>
    <string name="description">ImageView description</string>
    <string name="specify_search_criteria">Please specify a search criteria</string>
    <string name="edit">Edit</string>
    <string name="ok_option">OK</string>
    <string name="yes_option">Yes</string>
    <string name="none_option">None</string>
    <string name="no_option">No</string>
    <string name="error_message">Error</string>
    <string name="delete">Delete</string>
    <string name="missing_mandatory_field">Missing mandatory field</string>
    <string name="unable_to_complete_registration">Unable to complete registration.</string>
    <string name="review_errors">Please review the errors below and try again.</string>
    <string name="validation_errors">Please review the validation errors and try again.</string>
    <string name="unique_value_form_empty">Invalid unique value</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="custom_url">Custom URL</string>
    <string name="invalid_username_or_password">Unable to log in due to an invalid username or password.</string>
    <string name="invalid_server_url">Invalid Server URL given.</string>
    <string name="unable_to_login">Unable to log in.</string>
    <string name="syncing">Synchronizing</string>
    <string name="refresh_relations">Refreshing active tracked entity instance relations from server</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_username">Please enter a username</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_serverurl">Please enter a server URL</string>
    <string name="profile">Profile</string>
    <string name="relationships">Relationships</string>
    <string name="indicators">Indicators</string>
    <string name="notes">Notes</string>
    <string name="of">of</string>
    <string name="new_string">New</string>
    <string name="refresh_string">Refresh</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_relationship">Do you want to register this relationship?</string>
    <string name="please_select_relationshiptype">Please select a relationship type</string>
    <string name="relationship_exists">Relationship already exists</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="no_event_present">No event present</string>
    <string name="missing_ou">Missing Organisation Unit</string>
    <string name="error_with_form">Error with form: </string>
    <string name="please_retry">. Please retry.</string>
    <string name="an_error_ocurred">An error occurred</string>
    <string name="due_date_for"> Due date for </string>
    <string name="loading">Loading</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordinates">Coordinates</string>
    <string name="error_location_values">Please enter a valid location value</string>
    <string name="loading_metadata">Loading meta data</string>
    <string name="saving_data_locally">Saving data locally</string>
    <string name="loading_events">Loading Events</string>
    <string name="loading_enrollments">Loading Enrollments</string>
    <string name="retry">Retry</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="retrying">Retrying</string>
    <string name="update_frequency">Automatic synchronization frequency</string>
    <string name="logout">"Delete all local data &amp; log out"</string>
    <string name="un_enroll">Un-enroll</string>
    <string name="complete">Complete</string>
    <string name="finishing_up">Finishing initial database setup. This may take several minutes so please be patient.</string>
    <string name="loading_server_info">Loading server info</string>
    <string name="loading_assigned_programs">Loading assigned programs</string>
    <string name="loading_program">Loading programId</string>
    <string name="loading_optionsets">Loading option sets</string>
    <string name="loading_trackedentityattributes">Loading Tracked Entity Attributes</string>
    <string name="updating_constants">Updating constants</string>
    <string name="loading_constants">Loading constants</string>
    <string name="loading_programrules">Loading programId rules</string>
    <string name="loading_programrulevariables">Loading programId rule variables</string>
    <string name="loading_programruleactions">Loading programId rule actions</string>
    <string name="loading_tracked_entity_instances">Loading tracked entity instances</string>
    <string name="loading_relationshiptypes">Loading tracked entity instances</string>
    <string name="incomplete">Incomplete</string>
    <string name="discard">Discard</string>
    <string name="discard_confirm_changes">Are you sure you want to discard the current changes?</string>
    <string name="save_and_close">Save and close</string>
    <string name="terminate">Cancel</string>
    <string name="unknown">Unknown</string>
    <string name="sending_data_server">Sending data to server</string>
    <string-array name="update_frequencies">
        <item>1 Minute</item>
        <item>15 Minutes</item>
        <item>1 Hour</item>
        <item>1 Day</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="copy_store_error_message">
        <item>Copy</item>
        <item>Write to SD card</item>
    </string-array>
    <string name="synchronize_with_server">Sync with server</string>
    <string name="event_sent">Sent</string>
    <string name="find_option">Find Option</string>
    <string name="new_event">New event</string>
    <string name="event_offline">Offline</string>
    <string name="event_error">Error</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="validation_field_exit">Warning: There are invalid values and you\'re about to exit. If you proceed, invalid values will be deleted. Do you want to continue?</string>
    <string name="validation_field_title">Warning: There are invalid values</string>
    <string name="program_rule_on_complete_message_title">Program rule messages</string>
    <string name="program_rule_on_complete_message_error">Error: %s</string>
    <string name="program_rule_on_complete_message_warning">Warning: %s</string>
    <string name="validation_compulsory_error">Please complete the following compulsory fields</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_long_text">Enter long text</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_integer">Enter integer</string>
    <string name="enter_negative_integer">Enter negative integer</string>
    <string name="enter_percentage">Enter percentage</string>
    <string name="enter_positive_integer_or_zero">Enter positive integer or zero</string>
    <string name="enter_positive_integer">Enter positive integer</string>
    <string name="enter_coordinates">Enter coordinates</string>
    <string name="latitude_error_message">Latitude must be in range from -90 to 90</string>
    <string name="longitude_error_message">Longitude must be in range from -180 to 180</string>
    <string name="warning_hidefieldwithvalue">The following fields with value are being hidden and value has been blanked.</string>
    <string name="report_date">Report date</string>
    <string name="choose_organisation_unit">Choose organisation unit</string>
    <string name="choose_program">Choose program</string>
    <string name="duedate">Due date</string>
    <string name="eventname">Event name</string>
    <string name="startdate">Start date</string>
    <string name="enddate">End date</string>
    <string name="registered_events">Registered events</string>
    <string name="status">Status</string>
    <string name="event_status">Event status</string>
    <string name="validate">Validate</string>
    <string name="up">UP</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="logout_message">Are you sure you want to log out? All your data stored on the device will get lost if you choose to log out.</string>
    <string name="logout_title">Logging out</string>
    <string name="complete_confirm">Are you sure you want to complete the event?</string>
    <string name="incomplete_confirm">Are you sure you want to incomplete the event?</string>
    <string name="tracked_entity_instances">Tracked Entity Instances</string>
    <string name="validation_success">Validation successful!</string>
    <string name="last_updated">Last updated</string>
    <string name="failed_item">Failed item</string>
    <string name="detailed_search">Detailed search</string>
    <string name="select_to_load">Select to load to device</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="query_tracked_entity_instances">Download entity instances</string>
    <string name="unsynchronized_data_values">You need to synchronize your changes with the server before logging out. Please check your Internet connection and press the synchronization button</string>
    <string name="status_sent_description">This item has been successfully synchronized with the server.</string>
    <string name="status_offline_description">This item has not yet been synchronized with the server.</string>
    <string name="status_error_description">Something went wrong. Please, try to re-upload event or contact administrator.</string>
    <string name="copied_text">Copied text to clipboard.</string>
    <string name="network_error">Network error</string>
    <string name="error_description">Error description</string>
    <string name="error_sync">There was an error during sync. Checking your internet connection.</string>
    <string name="text_written_to_sd_card">Text written to SD Card</string>
    <string name="sd_card_error_message">Error! Is SD Card inserted?</string>
    <string name="go_to_programoverview_fragment">Go to overview</string>
    <string name="go_to_dataentry_fragment">Go to data entry</string>
    <string name="remove">Remove from device</string>
    <string name="remove_report_entity_dialog_title">Remove item?</string>
    <string name="remove_report_entity_dialog_message">This item will be removed from your device. You can re-download this item from the server at a later time.</string>
    <string name="developers_settings">Developers options</string>
    <string name="export_data_name">Export database</string>
    <string name="developer_option_title">"Show developer options"</string>
    <string name="details">"Details"</string>
    <string name="pull">Starting pull…</string>
</resources>