<!--
  ~ * Copyright (c) 2016, University of Oslo
  ~  * All rights reserved.
  ~  *
  ~  * Redistribution and use in source and binary forms, with or without
  ~  * modification, are permitted provided that the following conditions are met:
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~  * list of conditions and the following disclaimer.
  ~  *
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~  * this list of conditions and the following disclaimer in the documentation
  ~  * and/or other materials provided with the distribution.
  ~  * Neither the name of the HISP project nor the names of its contributors may
  ~  * be used to endorse or promote products derived from this software without
  ~  * specific prior written permission.
  ~  *
  ~  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~  * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~  * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~  */
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <include layout="@layout/progress_bar_light" />

        <LinearLayout
            android:id="@+id/login_views_container"
            android:layout_width="390dp"
            android:layout_height="340dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dhis2_logo"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description"
                android:src="@drawable/dhis2_logo" />

            <org.hisp.dhis.android.sdk.ui.views.FontEditText
                android:id="@+id/server_url"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="1px"
                android:background="@drawable/edittext_login_custom_shape"
                android:drawableLeft="@drawable/ic_server"
                android:drawablePadding="7dp"
                android:gravity="center_vertical"
                android:hint="@string/server_url"
                android:inputType="textUri"
                android:paddingLeft="7dp"
                android:singleLine="true"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/regular_font_name" />

            <org.hisp.dhis.android.sdk.ui.views.FontEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="1px"
                android:background="@drawable/edittext_login_custom_shape"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="7dp"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:paddingLeft="7dp"
                android:singleLine="true"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/regular_font_name" />

            <org.hisp.dhis.android.sdk.ui.views.FontEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_login_custom_shape"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="7dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="7dp"
                android:singleLine="true"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/regular_font_name" />

            <org.hisp.dhis.android.sdk.ui.views.FontButton
                android:id="@+id/login_button"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_blue_selector"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/bold_font_name" />

        </LinearLayout>

        <org.hisp.dhis.android.sdk.ui.views.FontTextView
            android:id="@+id/progress_text"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/pull"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:visibility="visible"
            app:font="@string/regular_font_name" />
    </RelativeLayout>
</ScrollView>