<?xml version="1.0" encoding="utf-8"?><!--
  ~ * Copyright (c) 2016, University of Oslo
  ~  * All rights reserved.
  ~  *
  ~  * Redistribution and use in source and binary forms, with or without
  ~  * modification, are permitted provided that the following conditions are met:
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~  * list of conditions and the following disclaimer.
  ~  *
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~  * this list of conditions and the following disclaimer in the documentation
  ~  * and/or other materials provided with the distribution.
  ~  * Neither the name of the HISP project nor the names of its contributors may
  ~  * be used to endorse or promote products derived from this software without
  ~  * specific prior written permission.
  ~  *
  ~  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~  * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~  * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/light_grey">

    <android.support.v7.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

            <org.hisp.dhis.android.sdk.ui.views.FontTextView
                android:id="@+id/update_frequency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/update_frequency"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/darker_grey"
                app:font="@string/light_font_name" />

            <Spinner
                android:id="@+id/settings_update_frequency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/spinner_background_holo_light"
                android:entries="@array/update_frequencies"
                android:layout_below="@+id/update_frequency_label" />
            <LinearLayout
                android:id="@+id/settings_sync_wrap_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_update_frequency_spinner"
                android:orientation="horizontal"
                android:paddingTop="40dp"
                android:weightSum="1">

            <org.hisp.dhis.android.sdk.ui.views.FontButton
                android:id="@+id/settings_sync_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_blue_selector"
                android:singleLine="true"
                android:text="@string/synchronize_with_server"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:layout_below="@+id/settings_update_frequency_spinner"
                android:layout_gravity="center_horizontal"
                app:font="@string/medium_font_name"
                android:layout_weight="0.5"
                />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/settings_progessbar"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sync_settings_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_sync_wrap_layout">
                <TextView
                    android:id="@+id/settings_sync_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>


            <org.hisp.dhis.android.sdk.ui.views.FontButton
                android:id="@+id/settings_logout_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_red_selector"
                android:singleLine="true"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="6dp"
                app:font="@string/medium_font_name" />
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_above="@+id/settings_logout_button"
            android:layout_below="@id/sync_settings_container"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

                <org.hisp.dhis.android.sdk.ui.views.FontTextView
                android:id="@+id/developer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/developers_settings"
                android:textColor="@color/darker_grey"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/light_font_name" />


                <org.hisp.dhis.android.sdk.ui.views.FontCheckBox
                    android:id="@+id/checkbox_developers_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/developer_title"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:text="@string/developer_option_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    app:font="@string/medium_font_name" />
            <org.hisp.dhis.android.sdk.ui.views.FontButton
                android:id="@+id/settings_export_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_blue_selector"
                android:visibility="gone"
                android:padding="6dp"
                android:text="@string/export_data_name"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                app:font="@string/medium_font_name" />

        </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>