<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ * Copyright (c) 2016, University of Oslo
  ~  * All rights reserved.
  ~  *
  ~  * Redistribution and use in source and binary forms, with or without
  ~  * modification, are permitted provided that the following conditions are met:
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~  * list of conditions and the following disclaimer.
  ~  *
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~  * this list of conditions and the following disclaimer in the documentation
  ~  * and/or other materials provided with the distribution.
  ~  * Neither the name of the HISP project nor the names of its contributors may
  ~  * be used to endorse or promote products derived from this software without
  ~  * specific prior written permission.
  ~  *
  ~  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~  * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~  * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~  */
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/navy_blue"
        android:orientation="horizontal"
        android:weightSum="1">

        <org.hisp.dhis.android.sdk.ui.views.FontTextView
            android:id="@+id/dialog_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:font="@string/condensed_font_name"/>


        <ImageView
            android:id="@+id/sync_dialog_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_selector"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_refresh"/>

        <ImageView
            android:id="@+id/close_dialog_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:adjustViewBounds="true"
            android:background="@drawable/transparent_selector"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:padding="8dp"
            android:src="@drawable/ic_close_dialog"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dark_navy_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemstatus"
                    app:srcCompat="@drawable/ic_offline" />

                <org.hisp.dhis.android.sdk.ui.views.FontTextView
                    android:id="@+id/statusinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:layout_weight="1"
                    android:text="@string/status_offline_description"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailTrigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <org.hisp.dhis.android.sdk.ui.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:layout_weight="1"
                    android:text="@string/details"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:id="@+id/triangle"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_triangle_collapsed" />
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <org.hisp.dhis.android.sdk.ui.views.FontTextView
                    android:id="@+id/item_detailed_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:visibility="gone"
                    android:text="" />

                </ScrollView>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>